--- a/index.html
+++ b/index.html
@@ -183,11 +183,17 @@
         "DPARSAD 401-500": ""
     },
     "11": {
-        "DPARSAD 1-100": "",
-        "DPARSAD 101-200": "",
-        "DPARSAD 201-300": "",
-        "DPARSAD 301-400": "",
-        "DPARSAD 401-500": ""
+         "1. Periodic Plans of Nepal": "",
+    "2. Sustainable Development & Environment": "",
+    "3. International Affairs (UNO, SAARC, BIMSTEC)": "",
+    "4. Constitution of Nepal (Part 1–5)": "",
+    "5. Governance System (Federal, Provincial, Local)": "",
+    "6. Civil Service Act & Regulations": "",
+    "7. Scope of Public Services": "",
+    "8. Public Service Charter": "",
+    "9. Public Policy": "",
+    "10. Fundamentals of Management": "",
+    "11. Govt. Planning, Budgeting & Accounting": ""
     }
    
     };
