--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     },
     "3": {
         "DPARSAD 1-100": "1z1BD4dJBsa30yVPeLRKdum9QZRUo0CzS",
-        "DPARSAD 101-200": "",
+        "DPARSAD 101-175": "1z1BD4dJBsa30yVPeLRKdum9QZRUo0CzS",
         "DPARSAD 201-300": "",
         "DPARSAD 301-400": "",
         "DPARSAD 401-500": ""
@@ -165,11 +165,9 @@
         "DPARSAD 401-500": ""
     },
     "9": {
-        "DPARSAD 1-100": "",
-        "DPARSAD 101-200": "",
-        "DPARSAD 201-300": "",
-        "DPARSAD 301-400": "",
-        "DPARSAD 401-500": ""
+        "DPARSAD 1-75": "1q1A_kumq-JieVTi-_bXE8k2SVMpfJoxF",
+        "DPARSAD 75-129": "18TMf8id1Yz6p2EjNONb8bIgf4AkG2fC0",
+    
     },
     "10": {
         "DPARSAD 1-100": "",
